# ironclaw

./: .env.example  CHANGELOG.md  Cargo.toml  FEATURE_PARITY.md  README.md  deny.toml
crates/ironclaw_event_projections/: Cargo.toml
crates/ironclaw_event_projections/src/: lib.rs  pending_gate_projection.rs
crates/ironclaw_event_projections/tests/: memory_prompt_safety_projection_contract.rs  memory_significant_events_projection_contract.rs  replay_projection_contract.rs
crates/ironclaw_extensions/: Cargo.toml
crates/ironclaw_extensions/src/: installations.rs  lib.rs  lifecycle.rs  registry.rs  v2.rs
crates/ironclaw_extensions/tests/: manifest_v2_contract.rs
crates/ironclaw_host_runtime/: Cargo.toml
crates/ironclaw_host_runtime/src/: lib.rs  memory_context.rs  obligations.rs  production.rs  sandbox_process.rs  services.rs  surface.rs  user_profile_source.rs  wasm_credentials.rs
crates/ironclaw_host_runtime/src/first_party_tools/: http.rs  memory.rs  mod.rs  profile_set.rs  schemas.rs  trigger_management.rs
crates/ironclaw_host_runtime/src/sandbox_process/: container_identity.rs  mounts.rs  scope_key.rs
crates/ironclaw_host_runtime/src/services/: builder.rs  tests.rs
crates/ironclaw_host_runtime/tests/: builtin_obligation_handler_contract.rs  first_party_builtin_tools.rs  first_party_runtime_contract.rs  github_wasm_runtime_contract.rs  host_runtime_contract.rs  memory_prompt_context.rs  runtime_http_egress_contract.rs  tool_surface_contract.rs
crates/ironclaw_memory/: AGENTS.md  CLAUDE.md  Cargo.toml
crates/ironclaw_memory/src/: backend.rs  context.rs  events.rs  filesystem.rs  hash.rs  lib.rs  metadata.rs  path.rs  safety.rs  service.rs
crates/ironclaw_memory/src/repo/: libsql.rs  native_libsql.rs  native_postgres.rs  postgres.rs
crates/ironclaw_memory/tests/: db_memory_repository_contract.rs  e2e_scope_isolation_safety.rs  memory_backend_contract.rs  memory_filesystem_contract.rs
crates/ironclaw_memory_native/: AGENTS.md  CLAUDE.md  Cargo.toml
crates/ironclaw_memory_native/src/: backend.rs  chunking.rs  contract_tests.rs  embedding.rs  events.rs  filesystem.rs  indexer.rs  lib.rs  metadata.rs  path.rs  safety.rs  schema.rs  search.rs  service.rs  write_metadata.rs
crates/ironclaw_memory_native/src/repo/: filesystem.rs  in_memory.rs  mod.rs
crates/ironclaw_memory_native/tests/: memory_backend_contract.rs  memory_filesystem_contract.rs  memory_service_facade.rs  repo_filesystem_contract.rs  repo_in_memory_contract.rs
crates/ironclaw_product_workflow/: CLAUDE.md  Cargo.toml
crates/ironclaw_product_workflow/src/: action.rs  binding.rs  conversation_binding.rs  fakes.rs  lib.rs  lifecycle.rs  reborn_services.rs  webui_inbound.rs  workflow.rs
crates/ironclaw_product_workflow/src/approval_interaction/: resolver.rs  service.rs  types.rs
crates/ironclaw_product_workflow/src/reborn_services/: extension_credentials.rs
crates/ironclaw_product_workflow/tests/: approval_interaction_contract.rs  product_workflow_contract.rs  reborn_services_contract.rs
crates/ironclaw_product_workflow/tests/support/: planned_agent_loop.rs
crates/ironclaw_reborn/: Cargo.toml
crates/ironclaw_reborn/src/: driver_registry.rs  lib.rs  loop_driver_host.rs  milestone_events.rs  model_gateway.rs  model_routes.rs  production_readiness.rs  turn_runner.rs
crates/ironclaw_reborn/src/loop_exit_applier/tests/: mod.rs
crates/ironclaw_reborn/src/subagent/: completion_observer.rs  flavors.rs  gate_resolution.rs  prompt_material.rs
crates/ironclaw_reborn/src/turn_runner/tests/: mod.rs
crates/ironclaw_reborn/tests/: driver_registry.rs  llm_gateway.rs  loop_driver_host.rs  loop_milestone_event_projection.rs  model_routes.rs  production_readiness.rs  secrets.rs
crates/ironclaw_reborn_composition/: CLAUDE.md  Cargo.toml
crates/ironclaw_reborn_composition/src/: auth.rs  auth_prompt.rs  automation.rs  available_extensions.rs  error.rs  extension_lifecycle.rs  factory.rs  lib.rs  lifecycle.rs  llm_config_service.rs  local_dev_authorization.rs  nearai_mcp.rs  oauth_dcr.rs  oauth_gate.rs  openai_compat_serve.rs  product_auth_runtime_credentials.rs  product_live_adapters.rs  profile_approval_authorization.rs  projection.rs  runtime.rs  runtime_input.rs  runtime_profile_approval_policy.rs  slack_channel_routes.rs  slack_delivery.rs  slack_dm_open.rs  slack_host_beta.rs  slack_host_state.rs  slack_outbound_targets.rs  slack_pairing_notifier.rs  slack_personal_binding_pairing_serve.rs  slack_serve.rs  trigger_poller.rs  webui.rs  webui_extension_credentials.rs
crates/ironclaw_reborn_composition/src/product_auth_durable/: tests.rs
crates/ironclaw_reborn_composition/src/product_auth_serve/: mod.rs  oauth.rs
crates/ironclaw_reborn_composition/src/projection/: display_preview.rs  live_progress.rs  tests.rs  turn_events.rs
crates/ironclaw_reborn_composition/src/runtime/: local_dev.rs  skills.rs
crates/ironclaw_reborn_composition/src/slack_serve/: e2e_auth_challenge.rs  e2e_tests.rs
crates/ironclaw_reborn_composition/src/trigger_poller/: active_run_lookup.rs
crates/ironclaw_reborn_composition/tests/: facade_factory.rs  product_live_adapters.rs  trigger_poller_e2e.rs  webui_v2_e2e.rs  webui_v2_serve.rs
crates/ironclaw_reborn_openai_compat/: AGENTS.md  CLAUDE.md  Cargo.toml
crates/ironclaw_reborn_openai_compat/src/: ack_helpers.rs  chat_workflow.rs  handlers.rs  lib.rs  projection_helpers.rs  responses_workflow.rs  streaming.rs
crates/ironclaw_reborn_openai_compat/tests/: chat_workflow_handlers_contract.rs  responses_workflow_handlers_contract.rs  streaming_handlers_contract.rs
crates/ironclaw_threads/: CLAUDE.md  Cargo.toml
crates/ironclaw_threads/src/: capability_display_preview.rs  contract.rs  filesystem_service.rs  identifiers.rs  in_memory.rs  lib.rs  service.rs
crates/ironclaw_threads/tests/: filesystem_session_thread_contract.rs  session_thread_contract.rs
crates/ironclaw_wasm/: CLAUDE.md  Cargo.toml
crates/ironclaw_wasm/src/: lib.rs
crates/ironclaw_wasm/tests/: wasm_dispatch_integration.rs  wit_tool_runtime_contract.rs
docs/: LLM_PROVIDERS.md  (+1 more)
(+512 files in other folders)
