[package]
name = "ironclaw_host_runtime"
version = "0.1.0"
edition = "2024"
publish = false

[features]
default = []
test-support = []
postgres = ["dep:deadpool-postgres", "ironclaw_filesystem/postgres", "ironclaw_resources/postgres", "ironclaw_run_state/postgres"]
libsql = ["dep:libsql", "ironclaw_filesystem/libsql", "ironclaw_resources/libsql", "ironclaw_run_state/libsql"]

[dependencies]
async-trait = "0.1"
base64 = "0.22.1"
bollard = "0.18"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
chrono-tz = "0.10"
deadpool-postgres = { version = "0.14", optional = true }
futures-util = "0.3"
dirs = "6"
hex = "0.4"
ironclaw_approvals = { path = "../ironclaw_approvals" }
ironclaw_authorization = { path = "../ironclaw_authorization" }
ironclaw_capabilities = { path = "../ironclaw_capabilities" }
ironclaw_process_sandbox = { path = "../ironclaw_process_sandbox" }
ironclaw_dispatcher = { path = "../ironclaw_dispatcher" }
ironclaw_events = { path = "../ironclaw_events" }
ironclaw_extensions = { path = "../ironclaw_extensions" }
ironclaw_filesystem = { path = "../ironclaw_filesystem" }
ironclaw_first_party_extensions = { path = "../ironclaw_first_party_extensions" }
ironclaw_host_api = { path = "../ironclaw_host_api" }
ironclaw_memory = { path = "../ironclaw_memory" }
ironclaw_memory_native = { path = "../ironclaw_memory_native" }
ironclaw_mcp = { path = "../ironclaw_mcp" }
ironclaw_network = { path = "../ironclaw_network" }
ironclaw_processes = { path = "../ironclaw_processes" }
ironclaw_product_adapter_registry = { path = "../ironclaw_product_adapter_registry" }
ironclaw_prompt_envelope = { path = "../ironclaw_prompt_envelope" }
ironclaw_reborn_event_store = { path = "../ironclaw_reborn_event_store" }
ironclaw_reborn_traces = { path = "../ironclaw_reborn_traces" }
ironclaw_resources = { path = "../ironclaw_resources" }
ironclaw_run_state = { path = "../ironclaw_run_state" }
ironclaw_runtime_policy = { path = "../ironclaw_runtime_policy" }
ironclaw_safety = { path = "../ironclaw_safety" }
ironclaw_scripts = { path = "../ironclaw_scripts" }
ironclaw_secrets = { path = "../ironclaw_secrets" }
ironclaw_skills = { path = "../ironclaw_skills" }
ironclaw_triggers = { path = "../ironclaw_triggers" }
ironclaw_trust = { path = "../ironclaw_trust" }
ironclaw_turns = { path = "../ironclaw_turns" }
ironclaw_wasm = { path = "../ironclaw_wasm" }
libsql = { version = "0.6", optional = true, default-features = false, features = ["core", "replication", "remote", "tls"] }
jsonschema = { version = "0.45", default-features = false }
libc = "0.2"
rust_decimal = { version = "1", features = ["serde", "serde-with-str"] }
secrecy = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
tokio = { version = "1", features = ["io-util", "macros", "process", "rt", "sync", "time"] }
tokio-util = { version = "0.7" }
tracing = "0.1"
url = "2"
uuid = { version = "1", features = ["v4"] }
zip = { version = "2", default-features = false, features = ["deflate"] }

[dev-dependencies]
axum = { version = "0.8", features = ["json"] }
hex = "0.4"
ironclaw_event_projections = { path = "../ironclaw_event_projections" }
sha2 = "0.10"
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt", "sync", "time"] }
tokio-postgres = "0.7"
tracing-subscriber = "0.3"
tracing-test = { version = "0.2", features = ["no-env-filter"] }
zeroize = "1"
wat = "1.245.1"
wit-component = "0.245.1"
wit-parser = "0.245.1"

[lints]
workspace = true
