[package]
name = "ironclaw_memory"
version = "0.1.0"
edition = "2024"
rust-version = "1.92"
description = "Memory document service adapters for IronClaw Reborn"
authors = ["NEAR AI <support@near.ai>"]
license = "MIT OR Apache-2.0"
homepage = "https://github.com/nearai/ironclaw"
repository = "https://github.com/nearai/ironclaw"
publish = false

[features]
default = []
postgres = ["dep:deadpool-postgres", "dep:tokio-postgres", "dep:uuid"]
libsql = ["dep:libsql", "dep:uuid"]

[dependencies]
async-trait = "0.1"
deadpool-postgres = { version = "0.14", optional = true }
ironclaw_filesystem = { path = "../ironclaw_filesystem", version = "0.1.0" }
ironclaw_host_api = { path = "../ironclaw_host_api", version = "0.1.0" }
libsql = { version = "0.6", optional = true, default-features = false, features = ["core", "replication", "remote", "tls"] }
tokio-postgres = { version = "0.7", optional = true }
uuid = { version = "1", features = ["v4"], optional = true }

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt"] }
