[package]
name = "ironclaw_product_workflow"
version = "0.1.0"
edition = "2024"
rust-version = "1.92"
description = "Product-facing workflow facade for IronClaw Reborn (#3280)"
authors = ["NEAR AI <support@near.ai>"]
license = "MIT OR Apache-2.0"
homepage = "https://github.com/nearai/ironclaw"
repository = "https://github.com/nearai/ironclaw"
publish = false

[features]
default = []
# Compile in-memory fakes (FakeInboundTurnService, FakeConversationBindingService,
# FakeIdempotencyLedger, etc.). Off by default so production binaries don't carry
# the fake state machinery; downstream crates enable it from `[dev-dependencies]`.
test-support = ["ironclaw_product_adapters/test-support"]

[dependencies]
async-trait = "0.1"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
ironclaw_common = { path = "../ironclaw_common", version = "0.4.1" }
ironclaw_attachments = { path = "../ironclaw_attachments", version = "0.1.0" }
ironclaw_approvals = { path = "../ironclaw_approvals", version = "0.1.0" }
ironclaw_authorization = { path = "../ironclaw_authorization", version = "0.1.0" }
ironclaw_auth = { path = "../ironclaw_auth", version = "0.1.0" }
ironclaw_events = { path = "../ironclaw_events", version = "0.1.0" }
ironclaw_host_api = { path = "../ironclaw_host_api", version = "0.1.0" }
ironclaw_conversations = { path = "../ironclaw_conversations", version = "0.1.0" }
ironclaw_outbound = { path = "../ironclaw_outbound", version = "0.1.0" }
ironclaw_product_adapters = { path = "../ironclaw_product_adapters", version = "0.1.0" }
ironclaw_reborn_traces = { path = "../ironclaw_reborn_traces", version = "0.1.0" }
ironclaw_run_state = { path = "../ironclaw_run_state", version = "0.1.0" }
ironclaw_threads = { path = "../ironclaw_threads", version = "0.1.0" }
ironclaw_turns = { path = "../ironclaw_turns", version = "0.1.0" }
ironclaw_product_context = { path = "../ironclaw_product_context", version = "0.1.0" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
secrecy = { version = "0.10", features = ["serde"] }
sha2 = "0.10"
thiserror = "2"
tokio = { version = "1", features = ["macros", "time"] }
tracing = "0.1"
url = "2"
uuid = { version = "1", features = ["v4", "v5", "serde"] }

[dev-dependencies]
ironclaw_filesystem = { path = "../ironclaw_filesystem" }
ironclaw_host_runtime = { path = "../ironclaw_host_runtime" }
ironclaw_loop_support = { path = "../ironclaw_loop_support" }
ironclaw_event_projections = { path = "../ironclaw_event_projections" }
ironclaw_reborn_composition = { path = "../ironclaw_reborn_composition", features = ["test-support"] }
ironclaw_reborn = { path = "../ironclaw_reborn" }
ironclaw_trust = { path = "../ironclaw_trust" }
ironclaw_product_workflow = { path = ".", features = ["test-support"] }
ironclaw_product_adapters = { path = "../ironclaw_product_adapters", features = ["test-support", "host-auth-mint"] }
ironclaw_threads = { path = "../ironclaw_threads", version = "0.1.0", features = ["test-support"] }
ironclaw_telegram_v2_adapter = { path = "../ironclaw_telegram_v2_adapter" }
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt", "sync", "time"] }
tokio-util = { version = "0.7", features = ["rt"] }
