[package]
name = "ironclaw_reborn"
version = "0.1.0"
edition = "2024"
rust-version = "1.92"
description = "Standalone Reborn composition and adapters for IronClaw"
authors = ["NEAR AI <support@near.ai>"]
license = "MIT OR Apache-2.0"
homepage = "https://github.com/nearai/ironclaw"
repository = "https://github.com/nearai/ironclaw"
publish = false

[features]
default = []
root-llm-provider = ["dep:ironclaw_llm"]
libsql-secrets = ["dep:ironclaw_secrets", "ironclaw_secrets/libsql", "dep:libsql", "dep:secrecy"]

[dependencies]
async-trait = "0.1"
futures-util = { version = "0.3", default-features = false }
ironclaw_llm = { path = "../ironclaw_llm", version = "0.1.0", optional = true, default-features = false }
ironclaw_loop_support = { path = "../ironclaw_loop_support", version = "0.1.0" }
ironclaw_secrets = { path = "../ironclaw_secrets", version = "0.1.0", optional = true }
ironclaw_threads = { path = "../ironclaw_threads", version = "0.1.0" }
ironclaw_turns = { path = "../ironclaw_turns", version = "0.1.0" }
libsql = { version = "0.6", optional = true, default-features = false, features = ["core", "replication", "remote", "tls"] }
secrecy = { version = "0.10", optional = true }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time"] }
tokio-util = { version = "0.7", features = ["rt"] }
tracing = "0.1"

[dev-dependencies]
chrono = "0.4"
ironclaw_host_api = { path = "../ironclaw_host_api", version = "0.1.0" }
rust_decimal = "1"
serde_json = "1"
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }

[[test]]
name = "llm_gateway"
required-features = ["root-llm-provider"]
