[package]
name = "ironclaw_reborn_composition"
version = "0.1.0"
edition = "2024"
rust-version = "1.92"
description = "Facade-shaped production composition root for IronClaw Reborn"
authors = ["NEAR AI <support@near.ai>"]
license = "MIT OR Apache-2.0"
homepage = "https://github.com/nearai/ironclaw"
repository = "https://github.com/nearai/ironclaw"
publish = false

[features]
default = []
libsql = [
    "dep:libsql",
    "ironclaw_authorization/libsql",
    "ironclaw_filesystem/libsql",
    "ironclaw_host_runtime/libsql",
    "ironclaw_reborn_event_store/libsql",
    "ironclaw_resources/libsql",
    "ironclaw_run_state/libsql",
    "ironclaw_secrets/libsql",
    "ironclaw_turns/libsql",
]
postgres = [
    "dep:deadpool-postgres",
    "ironclaw_authorization/postgres",
    "ironclaw_filesystem/postgres",
    "ironclaw_host_runtime/postgres",
    "ironclaw_reborn_event_store/postgres",
    "ironclaw_resources/postgres",
    "ironclaw_run_state/postgres",
    "ironclaw_secrets/postgres",
    "ironclaw_turns/postgres",
]

[dependencies]
async-trait = "0.1"
deadpool-postgres = { version = "0.14", optional = true }
ironclaw_authorization = { path = "../ironclaw_authorization" }
ironclaw_extensions = { path = "../ironclaw_extensions" }
ironclaw_filesystem = { path = "../ironclaw_filesystem" }
ironclaw_host_api = { path = "../ironclaw_host_api" }
ironclaw_host_runtime = { path = "../ironclaw_host_runtime" }
ironclaw_network = { path = "../ironclaw_network" }
ironclaw_processes = { path = "../ironclaw_processes" }
ironclaw_reborn = { path = "../ironclaw_reborn" }
ironclaw_reborn_event_store = { path = "../ironclaw_reborn_event_store" }
ironclaw_resources = { path = "../ironclaw_resources" }
ironclaw_run_state = { path = "../ironclaw_run_state" }
ironclaw_secrets = { path = "../ironclaw_secrets" }
ironclaw_trust = { path = "../ironclaw_trust" }
ironclaw_turns = { path = "../ironclaw_turns" }
libsql = { version = "0.6", optional = true, default-features = false, features = ["core", "replication", "remote", "tls"] }
secrecy = "0.10"
serde = { version = "1", features = ["derive"] }
thiserror = "2"
tracing = "0.1"

[dev-dependencies]
chrono = "0.4"
serde_json = "1"
tempfile = "3"
testcontainers-modules = { version = "0.11", features = ["postgres"] }
tokio = { version = "1", features = ["macros", "rt", "time"] }
