[package]
name = "ironclaw_reborn_composition"
version = "0.1.0"
edition = "2024"
rust-version = "1.92"
description = "Facade-shaped production composition root for IronClaw Reborn"
authors = ["NEAR AI <support@near.ai>"]
license = "MIT OR Apache-2.0"
homepage = "https://github.com/nearai/ironclaw"
repository = "https://github.com/nearai/ironclaw"
publish = false

[features]
default = []
# Wire a host-managed LLM model gateway into the assembled runtime via
# ironclaw_reborn's `LlmProviderModelGateway`. Off by default so this crate
# stays substrate-only when callers don't want a model gateway in the
# composed runtime. Mirrors `ironclaw_reborn`'s own `root-llm-provider`
# feature shape (optional dep, `default-features = false`).
root-llm-provider = [
    "dep:ironclaw_llm",
    "ironclaw_llm/registry-provider-factory",
    "ironclaw_reborn/root-llm-provider",
]
libsql = [
    "dep:libsql",
    "ironclaw_filesystem/libsql",
    "ironclaw_host_runtime/libsql",
    "ironclaw_reborn_event_store/libsql",
    "ironclaw_resources/libsql",
    "ironclaw_run_state/libsql",
]
postgres = [
    "dep:deadpool-postgres",
    "ironclaw_filesystem/postgres",
    "ironclaw_host_runtime/postgres",
    "ironclaw_reborn_event_store/postgres",
    "ironclaw_resources/postgres",
    "ironclaw_run_state/postgres",
]

[dependencies]
async-trait = "0.1"
chrono = "0.4"
deadpool-postgres = { version = "0.14", optional = true }
ironclaw_authorization = { path = "../ironclaw_authorization" }
ironclaw_extensions = { path = "../ironclaw_extensions" }
ironclaw_filesystem = { path = "../ironclaw_filesystem" }
ironclaw_host_api = { path = "../ironclaw_host_api" }
ironclaw_host_runtime = { path = "../ironclaw_host_runtime" }
ironclaw_llm = { path = "../ironclaw_llm", optional = true, default-features = false }
ironclaw_loop_support = { path = "../ironclaw_loop_support" }
ironclaw_network = { path = "../ironclaw_network" }
ironclaw_processes = { path = "../ironclaw_processes" }
ironclaw_product_adapters = { path = "../ironclaw_product_adapters" }
ironclaw_product_workflow = { path = "../ironclaw_product_workflow" }
ironclaw_reborn = { path = "../ironclaw_reborn" }
ironclaw_reborn_config = { path = "../ironclaw_reborn_config" }
ironclaw_reborn_event_store = { path = "../ironclaw_reborn_event_store" }
ironclaw_resources = { path = "../ironclaw_resources" }
ironclaw_run_state = { path = "../ironclaw_run_state" }
ironclaw_secrets = { path = "../ironclaw_secrets" }
ironclaw_threads = { path = "../ironclaw_threads" }
ironclaw_trust = { path = "../ironclaw_trust" }
ironclaw_turns = { path = "../ironclaw_turns" }
libsql = { version = "0.6", optional = true, default-features = false, features = ["core", "replication", "remote", "tls"] }
secrecy = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread", "sync", "time"] }
tokio-util = { version = "0.7", features = ["rt"] }
tracing = "0.1"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
ironclaw_skills = { path = "../ironclaw_skills" }
ironclaw_threads = { path = "../ironclaw_threads" }
tempfile = "3"
testcontainers-modules = { version = "0.11", features = ["postgres"] }
tokio = { version = "1", features = ["macros", "rt", "time"] }
