[package]
name = "ironclaw_wasm"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
ironclaw_host_api = { path = "../ironclaw_host_api" }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
wasmtime = { version = "43.0.1", features = ["component-model"] }
wasmtime-wasi = "43.0.1"

[dev-dependencies]
wat = "1.245.1"
wit-component = "0.245.1"
wit-parser = "0.245.1"
